docs/en-us/assets/style.css
/* ... */
.主體-格局-索引-回到頂部 {
    position: sticky;
    top: 30px;
    margin: 0 auto;
    display: block;
    appearance: none;
    border: 0;
    background: transparent;
    border-radius: 0.4rem;
    appearance: none;
    border: 2px solid var(--ts-gray-300);
    color: var(--ts-gray-600);
    border-radius: 0.4rem;
    padding: 0.4rem 1.2rem;
    font-size: 14px;
    font-weight: 500;
    font-family: "Noto Sans TC", "Noto Sans CJK TC";
    outline: none;
    cursor: pointer;
    width: 80%;
    margin-top: 2rem;
}

.主體-格局-索引-回到頂部:hover {
    border-color: var(--ts-gray-400);
}

.主體-格局-索引-回到頂部 .ts-icon {
    margin-right: 0.5rem;
    line-height: 1;
}

/**
 * 頁腳
 */

.頁腳 {
    background: var(--ts-gray-100);
    border-top: 1px solid var(--ts-gray-200);
    padding: 2rem 0px 4rem;
}

.頁腳-格局 {
    display: flex;
    align-items: flex-start;
}

.頁腳-格局-資訊 {
}

.頁腳-導航列 {
    display: flex;
    align-items: center;
    /* justify-content: center; */
    gap: 2rem;
}

.頁腳-導航列-項目 {
    color: var(--ts-gray-600);
    text-decoration: none;
}

.頁腳-導航列-項目_回到頂部 {
    color: var(--ts-gray-500);
}

.頁腳-導航列-項目_回到頂部 .ts-icon {
    margin-right: 0.5rem;
    line-height: 1;
}

.頁腳-格局-資訊-文字 {
    color: var(--ts-gray-600);
    font-size: 0.95rem;
    line-height: 2;
    margin-top: 2rem;
    max-width: 790px;
}

.頁腳-格局-資訊-文字 .ts-flag {
    margin-bottom: 3px;
    border-radius: 3px;
}

.頁腳-格局-資訊-文字 a {
    color: var(--ts-gray-700);
}

.頁腳-格局-資訊-翻譯者 {
    display: block;
    margin-top: 2rem;
    font-size: 0.95rem;
    color: var(--ts-gray-600);
    line-height: 2;
    max-width: 50rem;
}

.頁腳-格局-資訊-翻譯者 a {
    color: var(--ts-gray-800); /* 108ee9*/
    text-decoration: underline;
}

.頁腳-格局-商標 {
    padding-left: 2rem;
    margin-left: auto;
}

.頁腳-格局-商標-圖片 {
    width: 130px;
}

*:is([data-scheme="dark"], [data-scheme="darkest"]) .頁腳-格局-商標-圖片 {
    filter: invert(1) contrast(0.8);
}

@media (prefers-color-scheme: dark) {
    html:not([data-scheme="light"]) .頁腳-格局-商標-圖片 {
        filter: invert(1) contrast(0.8);
    }
}

@media screen and (max-width: 960px) {
    .穹頂 {
        padding: 1.5rem 0 2.5rem;
    }

    .穹頂-標題 {
        margin-top: 2rem;
    }

    .穹頂-標題-主要 {
        font-size: 1.6rem;
    }

    .穹頂-標題-說明 {
        margin-top: 0.5rem;
        font-size: 1rem;
    }

    .穹頂-導航列 {
        display: none;
    }

    .穹頂-導航列_手機的 {
        display: flex;
    }

    .穹頂-導航列_手機的 .穹頂-導航列-右側 {
        gap: 0.5rem;
    }

    .界限容器 {
        padding: 0 1.5rem;
    }

    .主體-格局 {
        flex-direction: column;
        gap: 2rem;
        margin: 2.5rem 0;
    }

    .主體-格局-導覽 {
        max-width: 100%;
        border-right: 0;
        display: none;
        position: fixed;
        top: 1rem;
        bottom: 1rem;
        left: 1rem;
        right: 1rem;
        border-radius: 1rem;
        z-index: 100;
        background: var(--ts-gray-50);
        padding: 1.5rem;
        overflow-y: auto;
        overflow-x: hidden;
        border: 1px solid var(--ts-gray-300);
        box-shadow: 0px 0px 20px #0000001a;
    }

    .主體-格局-導覽_啟用的 {
        display: flex;
    }

    .主體-格局-導覽-關閉按鈕 {
        display: block;
    }

    .主體-格局-導覽-項目 {
        overflow: initial;
    }

    .主體-格局-遮罩 {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: var(--ts-gray-300);
        backdrop-filter: blur(1px);
        z-index: 101;
        display: none;
    }

    .主體-格局-遮罩_啟用的 {
        display: block;
    }

    .主體-格局-內容 {
        max-width: 100%;
        padding: 0;
    }

    .主體-格局-內容-工具列-項目_標題 {
        font-size: 1.5rem;
    }

    .主體-格局-內容-主要範例-實際效果 {
        padding: 1rem;
    }

    .主體-格局-內容-單個範例_檢視原始碼中 .主體-格局-內容-單個範例-範例-實際效果 {
        padding: 1rem;
    }

    .主體-格局-內容-單個範例-範例-程式碼 {
        padding: 1rem;
    }

    .主體-格局-內容-單個範例-附帶程式碼 pre,
    .主體-格局-內容-主要範例-程式碼 pre,
    .主體-格局-內容-單個範例-範例-程式碼 pre {
        overflow-x: auto;
    }

    .主體-格局-內容-單個範例-附帶程式碼 .hljs,
    .主體-格局-內容-主要範例-程式碼 .hljs,
    .主體-格局-內容-單個範例-範例-程式碼 .hljs {
        white-space: pre;
    }

    .主體-格局-內容-單個範例-文字-標題_段落 {
        margin-top: 4rem;
    }

    .主體-格局-內容-標題_章節 {
        margin-bottom: 1rem;
        font-size: 1.5rem;
    }

    .主體-格局-內容-標題_章節:not(:first-child) {
        margin-top: 4rem;
    }

    .主體-格局-內容-相關元件 {
        margin-top: 3rem;
    }

    .主體-格局-內容-標題 + .主體-格局-內容-單個範例 .主體-格局-內容-單個範例-文字-標題_段落 {
        margin-top: 2rem;
    }

    .主體-格局-內容-單個範例-附帶程式碼 {
        margin-top: 2rem;
    }

    .主體-格局-內容-文字 .ts-box,
    .主體-格局-內容-單個範例-文字 .ts-box {
        overflow-x: scroll;
    }

    .主體-格局-內容-單個範例-文字 .ts-box table {
        white-space: nowrap;
    }

    .主體-格局-索引-回到頂部 {
        width: 100%;
        position: relative;
        top: initial;
        margin-top: 3rem;
    }

    .頁腳 {
        padding: 2.5rem 0;
    }

    .頁腳-導航列 {
        gap: 0.5rem 1rem;
        flex-wrap: wrap;
        font-size: 0.95rem;
    }

    .頁腳-格局 {
        flex-direction: column;
        gap: 2.5rem;
    }

    .頁腳-格局-資訊-文字 {
        margin-top: 2rem;
    }

    .頁腳-格局-資訊-翻譯者 {
        margin-top: 2rem;
    }

    .頁腳-格局-商標 {
        padding-left: initial;
        margin-left: initial;
        align-self: center;
    }
}

